kadai-add-status

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,6 +11,10 @@
   <% end %>
   
 <%= form_for(@task) do |f| %>
+
+  <%= f.label :status, 'ステータス' %>
+  <%= f.text_field :status %>
+
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
 
