--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,8 @@
-<h1>メッセージ一覧</h1>
+<h1>タスク一覧</h1>
 
 <ul>
   <% @task.each do |tasks| %>
-    <li><%= link_to tasks.id, tasks %> : <%= tasks.content %></li>
+    <li><%= link_to tasks.id, tasks %> : <%= tasks.status %> &gt;<%= tasks.content %></li>
   <% end %>
 </ul>
 <%= link_to '新規タスクの登録', new_task_path %>
