--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,3 +1,4 @@
+
  <% if task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -8,15 +9,28 @@
         <% end %>
       </ul>
     </div>
-  <% end %>
-  
-<%= form_for(@task) do |f| %>
-
-  <%= f.label :status, 'ステータス' %>
-  <%= f.text_field :status %>
-
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
-
-  <%= f.submit '登録' %>
 <% end %>
+
+<form class="form-horizontal">  
+<%= form_for(@task) do |f|%>
+
+<div class="form-group">
+  <%= f.label :status, 'ステータス' ,class:'col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6' %>
+  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
+  <%= f.text_field :status,class: 'form-control'%>
+  </div>
+</div>
+<div class="form-group">
+  <%= f.label :content, 'タスク', class:'col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6' %>
+    <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
+  <%= f.text_field :content,class: 'form-control' %>
+  </div>
+</div>
+ <div class="form-group">
+  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
+  <%= f.submit '登録' ,class: 'btn btn-primary' %>
+  </div>
+  </div>
+<% end %>
+</div>
+
