--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,27 @@
 <h1>タスク一覧</h1>
 
-<ul>
-  <% @task.each do |tasks| %>
-    <li><%= link_to tasks.id, tasks %> : <%= tasks.status %> &gt;<%= tasks.content %></li>
-  <% end %>
-</ul>
-<%= link_to '新規タスクの登録', new_task_path %>
+<% if @tasks.any? %>
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>id</th>
+        <th>status</th>
+        <th>task</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @tasks.each do |task| %>
+      <tr>
+        <td><%= link_to task.id, task %></td>
+        <td><%= task.status %></td>
+        <td><%= task.content %></td>
+      </tr>
+      <% end %>
+    </tbody>
+    
+  </table>
+    <%= paginate @tasks %>
+<% end %>
+<div>
+<%= link_to '新規タスクの登録', new_task_path,class: "btn btn-primary"%>
+</div>
