--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,24 +11,21 @@
     </div>
 <% end %>
 
+<div class="row">
+  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
 
 <%= form_for(@task) do |f|%>
-
-<div class="form-group col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
+  <div class="form-group">
   <%= f.label :status, 'ステータス' %>
   <%= f.text_field :status,class: 'form-control'%>
-</div>
-
-<div class="form-group col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
+  </div>
+  <div class="form-group">
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content,class: 'form-control' %>
-</div>
-
-<div class="form-group col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
+  </div>
   <%= link_to '一覧に戻る', tasks_path,class: 'btn btn-default' %>
   <%= f.submit '登録' ,class: 'btn btn-primary' %>
-</div>
-
 
 <% end %>
+</div>
 </div>
