--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,8 @@
 <h1>タスク一覧</h1>
+<% if logged_in? %>
+  <p>ログイン完了ユーザ: <%= current_user.name %></p>
 
-<% if @tasks.any? %>
+ <% if @tasks.any? %>
   <table class="table table-bordered">
     <thead>
       <tr>
@@ -25,3 +27,11 @@
 <div>
 <%= link_to '新規タスクの登録', new_task_path,class: "btn btn-primary"%>
 </div>
+<% else %>
+  <div class="center jumbotron">
+    <div class="text-center">
+      <h1>Welcome to the TASKLIST</h1>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
+  </div>
+<% end %>
