--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,12 @@
 <h1>タスク新規作成</h1>
 
+<% if logged_in? %>
 <%= render 'form', task: @task %>
-
+<% else %>
+  <div class="center jumbotron">
+    <div class="text-center">
+      <h3>ログインもしくは登録をしてください。</h3>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
+  </div>
+<% end %>
